Fix custom font name for better visibility Additionally to that in some selectors it was added the reference to the global used font again for a better visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
 }
 
 @font-face {
-    font-family: 'Norse-Bold';
+    font-family: 'Norse';
     src: url(../font/Norse-Bold.otf);
     font-weight: bold;
 }
@@ -44,11 +44,12 @@ body {
 .right-sidebar {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
+    row-gap: 2em;
 }
 
 .formInfo {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:var(--font-Name);
     font-weight: bold;
     font-size: 1.30rem;
     display: flex;
@@ -76,7 +77,7 @@ body {
 }
 
 legend {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: var(--font-Name);
     font-weight: bold;
     font-size: 1.50rem;
     margin-bottom: 2%;
@@ -145,7 +146,7 @@ a {
 }
 
 .odinSlang {
-    font-family: 'Norse-Bold';
+    font-family: 'Norse';
     font-size: 4rem;
     color: var(--form-bg-container);
 }
@@ -178,10 +179,15 @@ button {
     font-weight: bold;
     box-shadow: var(--form-box-shadow);
     font-family: Arial, Helvetica, sans-serif !important;
+    margin-bottom: 20px;
 }
 
 .login_link {
     color: var(--button-bg-color);
     font-weight: bold;
+}
+
+.registration {
     font-family: var(--font-Name);
+    color: var(--legend-font-color);
 }
